# spectre

./: .gitignore  CommunicateOverlapFields_8hpp_source.html  ParallelInfoExecutablePage.html  annotated.html  annotated.js  beginners_guide.html  brigand.html  build_profiling_and_optimization.html  citelist.html  classActionTesting_1_1MockDistributedObject-members.html  classActionTesting_1_1MockDistributedObject.html  classActionTesting_1_1MockDistributedObject.js  classActionTesting_1_1MockRuntimeSystem-members.html  classActionTesting_1_1MockRuntimeSystem.html  classActionTesting_1_1MockRuntimeSystem.js  classAlgorithmArray-members.html  classAlgorithmArray.html  classAlgorithmGroup-members.html  classAlgorithmGroup.html  classAlgorithmNodegroup-members.html  classAlgorithmNodegroup.html  classAlgorithmSingleton-members.html  classAlgorithmSingleton.html  classAverager-members.html  classAverager.html  classAverager.js  classBinaryTrajectories-members.html  classBinaryTrajectories.html  classBinaryTrajectories.js  classBlock-members.html  classBlock.html  classBlock.js  classBlockNeighbor-members.html  classBlockNeighbor.html  classBlockNeighbor.js  classBurgers_1_1AnalyticData_1_1Sinusoid-members.html  classBurgers_1_1AnalyticData_1_1Sinusoid.html  classBurgers_1_1AnalyticData_1_1Sinusoid.js  classBurgers_1_1BoundaryConditions_1_1BoundaryCondition-members.html  classBurgers_1_1BoundaryConditions_1_1BoundaryCondition.html  (+10233 more)
.github/workflows/: BuildDockerContainer.yaml  DemoContainer.yaml  Docker.yaml  PostRelease.yaml  Tests.yaml  main.yml
cmake/: AddStandaloneTests.cmake  PrintUsefulCMakeInfo.cmake  SetupSanitizers.cmake
containers/: Dockerfile.buildenv
doc_coverage/: index-sort-l.html  index.html
docs/: Doxyfile.in  References.bib
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_19.js  (+201 more)
src/Evolution/Ringdown/: CMakeLists.txt  StrahlkorperCoefsInRingdownDistortedFrame.cpp  StrahlkorperCoefsInRingdownDistortedFrame.hpp  WrapFillYlmData.cpp  WrapFillYlmData.hpp
src/Evolution/Ringdown/Python/: Bindings.cpp  CMakeLists.txt
src/ParallelAlgorithms/Interpolation/Runtime/: AccessWrapper.hpp  CMakeLists.txt  InterpolationTarget.hpp  Metafunctions.hpp  Tags.hpp
src/ParallelAlgorithms/Interpolation/Runtime/Actions/: CMakeLists.txt  InitializeInterpolationTarget.hpp  InterpolationTargetVarsFromElement.hpp
src/ParallelAlgorithms/Interpolation/Runtime/Callbacks/: CMakeLists.txt  Callback.hpp  ObserveSurfaceData.cpp  ObserveSurfaceData.hpp  ObserveTimeSeriesOnSurface.hpp  RegisterDerivedWithCharm.hpp
src/ParallelAlgorithms/Interpolation/Runtime/Events/: CMakeLists.txt  InterpolateToPoints.hpp  MarkAsInterpolation.hpp
src/ParallelAlgorithms/Interpolation/Runtime/Points/: AngularOrdering.cpp  AngularOrdering.hpp  BlockLogicalCoordinates.hpp  CMakeLists.txt  KerrHorizon.cpp  KerrHorizon.hpp  LineSegment.cpp  LineSegment.hpp  SpecifiedPoints.cpp  SpecifiedPoints.hpp  Sphere.cpp  Sphere.hpp  Target.hpp  WedgeSectionTorus.cpp  WedgeSectionTorus.hpp
src/ParallelAlgorithms/Interpolation/Runtime/Protocols/: CMakeLists.txt  Callback.hpp  Metavariables.hpp  Points.hpp  Target.hpp
src/ParallelAlgorithms/Interpolation/Runtime/Targets/: AngularOrdering.cpp  KerrHorizon.cpp  KerrHorizon.hpp  LineSegment.cpp  LineSegment.hpp  SpecifiedPoints.cpp  SpecifiedPoints.hpp  Sphere.cpp  Sphere.hpp  Target.hpp  WedgeSectionTorus.cpp  WedgeSectionTorus.hpp
src/PointwiseFunctions/Hydro/EquationsOfState/: Barotropic3D.hpp  CMakeLists.txt  DarkEnergyFluid.hpp  Enthalpy.cpp  Enthalpy.hpp  EquationOfState.hpp  Equilibrium3D.hpp  HybridEos.hpp  IdealFluid.hpp  PiecewisePolytropicFluid.hpp  PolytropicFluid.hpp  Spectral.cpp  Spectral.hpp  Tabulated3d.hpp
tests/Unit/ControlSystem/: CMakeLists.txt  Test_Averager.cpp  Test_Controller.cpp  Test_Event.cpp  Test_EventTriggerMetafunctions.cpp  Test_ExpirationTimes.cpp  Test_Initialization.cpp  Test_Metafunctions.cpp  Test_Tags.cpp  Test_Trigger.cpp  Test_UpdateFunctionOfTime.cpp
tests/Unit/ControlSystem/Actions/: Test_Initialization.cpp  Test_InitializeMeasurements.cpp
tests/Unit/ControlSystem/ControlErrors/: CMakeLists.txt  ComovingCharSpeedDerivative.py  Test_ComovingCharSpeedDerivative.cpp  Test_ComputeControlError.cpp  Test_Expansion.cpp  Test_Rotation.cpp  Test_Shape.cpp  Test_SizeControlStates.cpp  Test_SizeError.cpp  Test_StateHistory.cpp  Test_Translation.cpp
tests/Unit/ControlSystem/Systems/: CMakeLists.txt  CalculateTrajectories.cpp  Test_Compare.cpp  Test_Expansion.cpp  Test_RotScaleTrans.cpp  Test_Rotation.cpp  Test_Rotation2D.cpp  Test_Shape.cpp  Test_Size.cpp  Test_Translation.cpp
tests/Unit/ControlSystem/Tags/: Test_FunctionsOfTimeInitialize.cpp  Test_MeasurementTimescales.cpp
tests/Unit/Evolution/Ringdown/: CMakeLists.txt  Test_StrahlkorperCoefsInRingdownDistortedFrame.cpp
tests/Unit/ParallelAlgorithms/Interpolation/Runtime/: CMakeLists.txt  Test_AccessWrapper.cpp  Test_Metafunctions.cpp  Test_Protocols.cpp  Test_TargetComponent.cpp
tests/Unit/ParallelAlgorithms/Interpolation/Runtime/Actions/: CMakeLists.txt  Test_InitializeInterpolationTarget.cpp  Test_InterpolationTargetVarsFromElement.cpp
tests/Unit/ParallelAlgorithms/Interpolation/Runtime/Callbacks/: CMakeLists.txt  Test_ObserveDataOnStrahlkorper.cpp  Test_ObserveTimeSeriesOnSurface.cpp
tests/Unit/ParallelAlgorithms/Interpolation/Runtime/Events/: CMakeLists.txt  Test_InterpolateToPoints.cpp
tests/Unit/ParallelAlgorithms/Interpolation/Runtime/Points/: CMakeLists.txt  Test_AngularOrdering.cpp  Test_KerrHorizon.cpp  Test_LineSegment.cpp  Test_SpecifiedPoints.cpp  Test_Sphere.cpp  Test_WedgeSectionTorus.cpp
tools/: CheckFiles.sh  FileTestDefs.sh
(+3673 files in other folders)
